OPcache, slug, profiler

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,7 +5,10 @@ RUN apt-get update && apt-get install -y \
     unzip \
     libzip-dev \
     zip \
-    && docker-php-ext-install zip pdo pdo_mysql
+    && docker-php-ext-install zip pdo pdo_mysql opcache
+
+
+COPY ./conf.d/opcache.ini /usr/local/etc/php/conf.d/opcache.ini
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
