php config, api testing, gedmo

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
 
 
 COPY ./conf.d/opcache.ini /usr/local/etc/php/conf.d/opcache.ini
+COPY php.ini /usr/local/etc/php/
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
