--- a/backend/config/packages/framework.yaml
+++ b/backend/config/packages/framework.yaml
@@ -3,7 +3,11 @@ framework:
     secret: '%env(APP_SECRET)%'
 
     # Note that the session will be started ONLY if you read or write from it.
-    session: true
+    session:
+        enabled: true
+        storage_factory_id: session.storage.factory.native
+        handler_id: null
+        cookie_secure: auto
 
     #esi: true
     #fragments: true
