--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,18 +31,17 @@ services:
     networks:
       - app-network
 
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   volumes:
-  #     - ./frontend:/app
-  #   working_dir: /app
-  #   command: npm start
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - app-network
-
+  frontend:
+    build:
+      context: .
+      dockerfile: docker/frontend/Dockerfile
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+    command: [ "npm", "run", "dev", "--", "--host" ]
+    networks:
+      - app-network
 volumes:
   mysql_data:
 
