--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: docker/frontend/Dockerfile
+      dockerfile: ./frontend/Dockerfile
     ports:
       - "5173:5173"
     volumes:
@@ -42,6 +42,7 @@ services:
     command: [ "npm", "run", "dev", "--", "--host" ]
     networks:
       - app-network
+
 volumes:
   mysql_data:
 
