--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,6 +6,13 @@ server {
 
     index index.php index.html;
 
+    location /uploads/ {
+        alias /var/www/symfony/public/uploads/;
+        access_log off;
+        expires max;
+        try_files $uri =404;
+    }
+
     location / {
         try_files $uri /index.php$is_args$args;
     }
@@ -14,8 +21,8 @@ server {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        
-        fastcgi_param SCRIPT_FILENAME /var/www/symfony/public$fastcgi_script_name;
+
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
